--- a/css/grayscalestyles.css
+++ b/css/grayscalestyles.css
@@ -5638,7 +5638,7 @@ a.close.disabled {
 
 .modal-footer {
   position: absolute;
-  height: 1rem;
+  height: 2rem;
   bottom: 0;
   display: flex;
   flex-wrap: wrap;
@@ -10147,7 +10147,7 @@ body {
   min-height: 100vh;
 }
 #content-wrap {
-  padding-bottom: 1rem;    /* Footer height */
+  padding-bottom: 2rem;    /* Footer height */
 }
 
 #mainNav {
@@ -10373,5 +10373,9 @@ body {
 }
 
 .footer {
-  padding: 1rem 0;
+  /* padding: 1rem 0; */
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2rem;
 }
