mooier? css ook

--- a/css/mdb.css
+++ b/css/mdb.css
@@ -3,28 +3,35 @@
 /*!
  * Material Design for Bootstrap 4
  *   Version: MDB FREE 4.19.1
- * 
- * 
+ *
+ *
  *   Copyright: Material Design for Bootstrap
  *   https://mdbootstrap.com/
- * 
+ *
  *   Read the license: https://mdbootstrap.com/general/license/
- * 
- * 
+ *
+ *
  *   Documentation: https://mdbootstrap.com/
- * 
+ *
  *   Getting started: https://mdbootstrap.com/docs/jquery/getting-started/download/
- * 
+ *
  *   Tutorials: https://mdbootstrap.com/education/bootstrap/
- * 
+ *
  *   Templates: https://mdbootstrap.com/templates/
- * 
+ *
  *   Support: https://mdbootstrap.com/support/
- * 
+ *
  *   Contact: office@mdbootstrap.com
- * 
+ *
  *   Attribution: Animate CSS, Twitter Bootstrap, Materialize CSS, Normalize CSS, Waves JS, WOW JS, Toastr, Chart.js
  */
+ a[aria-expanded=true] .expand_more {
+    display: none;
+ }
+ a[aria-expanded=false] .expand_less {
+    display: none;
+ }
+
 .mdb-color.lighten-5 {
     background-color: #d0d6e2 !important
 }
@@ -6253,7 +6260,7 @@ a.waves-light {
 
 .btn-primary {
     color: #fff;
-    background-color: #4285f4 
+    background-color: #4285f4
 }
 
 .btn-primary:hover {
