--- a/css/grayscalestyles.css
+++ b/css/grayscalestyles.css
@@ -10379,10 +10379,10 @@ body {
   height: 1rem;
 }
 
-.collapseTransform .fa {
+.collapseTransform .bi {
   transition: .3s transform ease-in-out;
 }
 
-.collapseTransform .collapsed .fa {
+.collapseTransform .collapsed .bi {
   transform: rotate(-90deg);
 }
