alle tekst altijd left-aligned en padding van de divs met tekst aangepast

--- a/css/cwasa-reduced.css
+++ b/css/cwasa-reduced.css
@@ -233,3 +233,16 @@ body.busy::before {
   opacity: 0.4;
   pointer-events: none;
 }
+
+.textDIV{
+  padding:0px !important;
+}
+
+.avatarGIF{
+  margin-right: 80px;
+}
+
+.publicationDIV{
+  padding-right: 0px !important;
+  padding-left: 0px !important;
+}
