--- a/css/grayscalestyles.css
+++ b/css/grayscalestyles.css
@@ -10372,12 +10372,20 @@ body {
   color: #fff;
 }
 
-.footer {
-  /* padding: 1rem 0; */
+/* .footer {
+  padding: 1rem 0;
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 1rem;
+  height: 2rem;
+} */
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px; /* Set the fixed height of the footer here */
+  line-height: 60px; /* Vertically center the text there */
 }
 
 .collapseTransform .fa {
