--- a/css/cwasa-reduced.css
+++ b/css/cwasa-reduced.css
@@ -112,7 +112,7 @@ body.busy::before {
 }
 
 .explSpan{
-  width: 350px;
+  width: 450px;
   height: 500px;
   border-style: solid;
   border-width: 3px;
@@ -238,6 +238,12 @@ body.busy::before {
 
 .textDIV{
   padding:0px !important;
+}
+
+.playgroundTextDIV{
+  padding-left:0px !important;
+  padding-right:0px !important;
+  padding-bottom:0px !important;
 }
 
 
