--- a/ns-demo/css/cwasa-reduced.css
+++ b/ns-demo/css/cwasa-reduced.css
@@ -227,6 +227,10 @@ body.busy::before {
   display: none;
 }
 
+#yellow{
+  color: yellow;
+}
+
 #sentenceInput{
   background-color: #e4edf8;
   border-width: 0.5em;
