--- a/ns-demo/css/cwasa-reduced.css
+++ b/ns-demo/css/cwasa-reduced.css
@@ -231,17 +231,27 @@ body.busy::before {
   color: yellow;
 }
 
-#sentenceInput{
-  background-color: #e4edf8;
+#currSentence{
   border-width: 0.5em;
   border-radius: 0.5em;
   padding: 1em;
   font-style: italic;
   display: block;
+  text-align: left;
+}
+
+#currSentenceBox{
+  background-color: #e4edf8;
 }
 
 [data-id="sentenceOptions"]{
   background: #A3B8D2;
+}
+
+.leftSpace{
+  position: relative;
+  width: 97%;
+  left: 3%;
 }
 
 .no-top-padding{
