--- a/ns-demo/css/cwasa-reduced.css
+++ b/ns-demo/css/cwasa-reduced.css
@@ -28,12 +28,6 @@
 	font-size: 1em;  font-weight: bold;
 	text-align: center;  color: #E33;  width: 4.5em;
 }
-.txtGloss {
-  /* font-family: monospace;   */
-	font-size: 1em; 
-	text-align: left;  width: 10em;
-}
-
 .divCtrlPanel {
 	position: relative;
     margin: 0px; border: 1px solid; padding: 1ex;
@@ -237,6 +231,17 @@ body.busy::before {
   padding: 1em;
   font-style: italic;
   display: block;
+}
+
+.subtitles{
+  position: relative;
+  background-color: #e4edf8;
+  z-index: 100;
+  height: 2em;
+  bottom: 0;
+  align-content: center;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 [data-id="sentenceOptions"]{
