--- a/ns-demo/css/grayscalestyles.css
+++ b/ns-demo/css/grayscalestyles.css
@@ -2514,6 +2514,7 @@ textarea.form-control {
   font-size: 1rem;
   line-height: 1.5;
   border-radius: 0.25rem;
+  margin-bottom: 10px;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 @media (prefers-reduced-motion: reduce) {
