--- a/ns-demo/css/cwasa-reduced.css
+++ b/ns-demo/css/cwasa-reduced.css
@@ -238,6 +238,7 @@ body.busy::before {
   background-color: #e4edf8;
   z-index: 100;
   height: 2em;
+  width: 70%;
   font-size: 1.5em;
   bottom: 0;
   align-content: center;
