--- a/ns-demo/css/cwasa-reduced.css
+++ b/ns-demo/css/cwasa-reduced.css
@@ -246,7 +246,36 @@ body.busy::before {
   text-transform: uppercase;
 }
 
+.subtitlesRep0{
+  position: relative;
+  background-color: #e4edf8;
+  z-index: 100;
+  height: 2em;
+  width: 80%;
+  font-size: 1.5em;
+  bottom: 0;
+  align-content: center;
+  text-align: center;
+  text-transform: uppercase;
+}
+
 .subtitles{
+  position: relative;
+  background-color: #e4edf8;
+  z-index: 100;
+  height: 2em;
+  width: 95%;
+  font-size: 1.5em;
+  bottom: 0;
+  align-content: center;
+  text-align: center;
+  text-transform: uppercase;
+  overflow: auto;
+  white-space: initial;
+  word-break: break-word
+}
+
+.subtitles0{
   position: relative;
   background-color: #e4edf8;
   z-index: 100;
