--- a/css/cwasa-reduced.css
+++ b/css/cwasa-reduced.css
@@ -123,7 +123,7 @@ body.busy::before {
 
 .explSiGML{
   display: inline-block;
-  text-align: center;
+  text-align: left;
   overflow-y: scroll;
   overflow-x: hidden;
   width: 100%;
