--- a/ns-demo/css/cwasa-reduced.css
+++ b/ns-demo/css/cwasa-reduced.css
@@ -49,6 +49,7 @@
 .CWASAAvatar {
 	display: inline-block;
 	background: #A3B8D2;
+  max-width: 650px;
 	width: 100%;
   height: 500px;
 	border: 0px;
@@ -242,6 +243,7 @@ body.busy::before {
   z-index: 100;
   height: 2em;
   width: 100%;
+  max-width: 650px;
   font-size: 1.5em;
   bottom: 0;
   align-content: center;
@@ -255,6 +257,7 @@ body.busy::before {
   z-index: 100;
   height: 2em;
   width: 100%;
+  max-width: 650px;
   font-size: 1.5em;
   bottom: 0;
   align-content: center;
@@ -268,6 +271,7 @@ body.busy::before {
   z-index: 100;
   height: 2em;
   width: 100%;
+  max-width: 650px;
   font-size: 1.5em;
   bottom: 0;
   align-content: center;
@@ -284,6 +288,7 @@ body.busy::before {
   z-index: 100;
   height: 2em;
   width: 100%;
+  max-width: 650px;
   font-size: 1.5em;
   bottom: 0;
   align-content: center;
@@ -300,6 +305,7 @@ body.busy::before {
   z-index: 100;
   height: auto;
   width: 100%;
+  max-width: 650px;
   font-size: 1.5em;
   bottom: 0;
   align-content: center;
