update css for healthcare demo

--- a/css/grayscalestyles.css
+++ b/css/grayscalestyles.css
@@ -2516,6 +2516,8 @@ textarea.form-control {
   font-size: 1rem;
   line-height: 1.5;
   border-radius: 0.25rem;
+  margin-bottom: 0.1rem;
+  margin-top: 0.5rem;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 @media (prefers-reduced-motion: reduce) {
