Add a dropdown menu to navbar

--- a/css/grayscalestyles.css
+++ b/css/grayscalestyles.css
@@ -3166,6 +3166,23 @@ input[type=button].btn-block {
   left: auto;
 }
 
+/* For the dropdown hover */
+/* .nav-item.dropdown:hover .dropdown-menu {
+  display: block;
+  animation: fadeIn 0.3s ease-in-out;
+}
+
+@keyframes fadeIn {
+  from {
+      opacity: 0;
+      transform: translateY(-10px);
+  }
+  to {
+      opacity: 1;
+      transform: translateY(0);
+  }
+} */
+
 @media (min-width: 576px) {
   .dropdown-menu-sm-left {
     right: auto;
